[package]
name = "renko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17.7"
rusqlite = { version = "0.30.0", features = ["bundled"] }
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
serde_json = "1.0.115"